@@ -728,18 +728,6 @@ The time in seconds until the reset password expires.
 
 Default: ``86400`` (24h)
 
-.. _config-password.passlib:
-
-passlib
-~~~~~~~
-
-The path to the `INI file to load as CryptContext
-<https://passlib.readthedocs.io/en/stable/narr/context-tutorial.html#loading-saving-a-cryptcontext>`_.
-If no path is set, Tryton will use the schemes ``argon2``, ``scrypt``,
-``bcrypt`` or ``pbkdf2_sha512``.
-
-Default: ``None``
-
 .. _config-attachment:
 
 attachment
