@@ -143,7 +143,7 @@ setup(name=name,
         'python-sql >= 1.5',
         'simpleeval',
         'werkzeug >= 0.12',
-        'passlib >= 1.7.0',
+        'pwdlib[argon2] >= 0.2',
         'pytz;python_version<"3.9"',
         'backports.entry-points-selectable;python_version<"3.10"',
         ],
@@ -152,8 +152,6 @@ setup(name=name,
         'PostgreSQL': ['psycopg2 >= 2.7.0'],
         'graphviz': ['pydot'],
         'Levenshtein': ['python-Levenshtein'],
-        'BCrypt': ['passlib[bcrypt]'],
-        'Argon2': ['passlib[argon2]'],
         'html2text': ['html2text'],
         'weasyprint': ['weasyprint'],
         'coroutine': ['gevent>=1.1'],
