@@ -1,3 +1,4 @@
+* Replace passlib by pwdlib
 * Add size limit for RPC arguments
 * Store the ignore search limit option of export
 * Make field_names optional in Model.default_get
